# pyerrkor

./: IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
sibd_pyerr/: __init__.py  cli.py  core.py  install_profile.py  ipyext.py  registry.py
sibd_pyerr/display/: jupyter.py
sibd_pyerr/handlers/main/: __init__.py  index_error.py  name_error.py  syntax_error.py  type_error.py
tests/: index.ipynb  test_ipython_syntax.py  test_local_syntax.py  test_normal.py  test_runtime_error.py  test_syntax_error.py
