[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sibd_pyerr"
version = "0.1.3"
description = "선일빅데이터고등학교 파이썬 에러 한글화"
authors = [
    { name = "김동철", email = "lhoiktn@gmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "ipython>=7.0.0"
]

[project.scripts]
sibd-py = "sibd_pyerr.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
include = ["sibd_pyerr*"]
exclude = ["tests*", "dev*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.log", "*.txt"]